removed rtmp and added customizations

--- a/settings_example.json
+++ b/settings_example.json
@@ -1,5 +1,5 @@
 {
-	"AdminPassword": "",
+	"AdminPassword": "plant2023",
 	"Bans": [],
 	"LetThemLurk": false,
 	"ListenAddress": ":8089",
@@ -7,13 +7,13 @@
 	"LogLevel": "debug",
 	"MaxMessageCount": 300,
 	"NoCache": false,
-	"PageTitle": "Movie Night",
+	"PageTitle": "Plantbaked.tv",
 	"RateLimitAuth": 5,
 	"RateLimitChat": 1,
 	"RateLimitColor": 60,
 	"RateLimitDuplicate": 30,
 	"RateLimitNick": 300,
-	"RegenAdminPass": true,
+	"RegenAdminPass": false,
 	"RtmpListenAddress": ":1935",
 	"StreamKey": "ALongStreamKey",
 	"TitleLength": 50,
